WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273334
REGRESSION (
278032@main
): Video does not render in element fullscreen after exiting LinearMediaKit fullscreen
https://bugs.webkit.org/show_bug.cgi?id=273334
Summary
REGRESSION (278032@main): Video does not render in element fullscreen after e...
Andy Estes
Reported
2024-04-26 11:30:17 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-26 11:30:30 PDT
<
rdar://problem/127125039
>
Andy Estes
Comment 2
2024-04-26 11:33:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27812
EWS
Comment 3
2024-04-26 12:00:41 PDT
Committed
278050@main
(a480da7fbd31): <
https://commits.webkit.org/278050@main
> Reviewed commits have been landed. Closing PR #27812 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug