REGRESSION (278032@main): Video does not render in element fullscreen after exiting LinearMediaKit fullscreen https://bugs.webkit.org/show_bug.cgi?id=273334 rdar://127125039

Reviewed by Jer Noble.

While attempting to address a test failure before landing 278032@main I added two early returns that
ended up not being necessary to fix the test, but did cause a regression where we never set a staged
AVSampleBufferDisplayLayer on MediaSourcePrivateAVFObjC when returning from LinearMediaKit fullscreen.
Resolved this by removing the unnecessary early returns.

* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::ensureLayerOrVideoRenderer):

Canonical link: https://commits.webkit.org/278050@main